--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Aman Singh",
   "license": "ISC",
   "devDependencies": {
-"dotenv": "^16.4.5",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "mongoose": "^8.2.3"
   }
 }
